--- a/src/input.css
+++ b/src/input.css
@@ -21,7 +21,7 @@ body,
 section {
   margin: 0;
   padding: 0;
-  overflow-x: hidden; /* Hide horizontal scrollbar */
+  overflow-x: hidden;
 }
 
 @media only screen and (max-width: 790px) {
